Added argLine in pom file